# bootypic

./: CMakeLists.txt  bootloader.c  bootloader.h  bootypic.mcp
devices/pic24fj256gb106/: boot_user.c  boot_user.h  config.h  linkerscript.gld  linkerscript_app.gld  linkerscript_boot.gld  p24FJ256GB106_combo.gld
